# Theory-of-Parallelism

./: .gitignore  README.md
task1/: CMakeLists.txt  main.cpp
